--- a/cluster/apps/networking/traefik/addons/theme-park/theme-park.go.tmpl
+++ b/cluster/apps/networking/traefik/addons/theme-park/theme-park.go.tmpl
@@ -1,4 +1,4 @@
-{{ $theme := "plex" }}
+{{ $theme := "nord" }}
 http:
   middlewares:
     #  Add any suppported base apps you would like to include in your auto generated middle set. "sonarr" and "radarr are the examples here.
